--- a/app/src/main/res/layout/item_base_airtravel_view.xml
+++ b/app/src/main/res/layout/item_base_airtravel_view.xml
@@ -3,22 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
-        android:paddingTop="@dimen/dp_5"
-        android:paddingBottom="@dimen/dp_5"
-        android:background="@drawable/shape_top_hb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@drawable/shape_top_hb"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/dp_5"
+        android:paddingBottom="@dimen/dp_5">
 
         <ImageView
             android:id="@+id/icon_hk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-             />
+            android:layout_gravity="center_vertical" />
 
         <TextView
             android:id="@+id/tv_hk_name"
@@ -40,6 +39,7 @@
             android:text=""
             android:textColor="@color/white"
             android:textSize="@dimen/sp_14" />
+
         <TextView
             android:id="@+id/tv_hk_chang"
             android:layout_width="wrap_content"
@@ -49,6 +49,7 @@
             android:text=""
             android:textColor="@color/white"
             android:textSize="@dimen/sp_14" />
+
         <TextView
             android:id="@+id/tv_hk_jx"
             android:layout_width="wrap_content"
@@ -62,45 +63,46 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginBottom="@dimen/dp_10">
+        android:layout_marginBottom="@dimen/dp_10"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_gravity="end"
                 android:id="@+id/tv_time_start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:text="00:00"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_20" />
 
             <TextView
-                    android:gravity="right"
-                android:layout_marginBottom="@dimen/dp_5"
                 android:id="@+id/tv_start_adress"
                 android:layout_width="@dimen/dp_120"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_time_start"
                 android:layout_gravity="right"
+                android:layout_marginBottom="@dimen/dp_5"
+                android:gravity="right"
                 android:text="深圳航空T2机场"
                 android:textColor="@color/colorT9"
                 android:textSize="@dimen/sp_14" />
+
             <TextView
-                android:layout_gravity="end"
-                android:layout_below="@+id/tv_start_adress"
                 android:id="@+id/tv_start_time_week"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_start_adress"
+                android:layout_gravity="end"
                 android:text="周六"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
@@ -108,44 +110,68 @@
 
         <ImageView
             android:id="@+id/iv_center"
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_3"
             android:layout_marginRight="@dimen/dp_5"
             android:src="@mipmap/plane_1" />
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_time_end"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:00"
-                android:textColor="@color/colorT3"
-                android:textSize="@dimen/sp_20" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_time_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="00:00"
+                    android:textColor="@color/colorT3"
+                    android:textSize="@dimen/sp_20" />
+
+                <TextView
+                    android:id="@+id/tv_nextday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_toRightOf="@id/tv_time_end"
+                    android:background="@drawable/hb_yuan"
+                    android:paddingLeft="@dimen/dp_3"
+                    android:paddingTop="@dimen/dp_1"
+                    android:paddingRight="@dimen/dp_3"
+                    android:paddingBottom="@dimen/dp_1"
+                    android:text="+1"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_9"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
 
             <TextView
 
-                android:layout_marginBottom="@dimen/dp_5"
                 android:id="@+id/tv_end_adress"
                 android:layout_width="@dimen/dp_120"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_time_end"
                 android:layout_gravity="center_vertical"
+                android:layout_marginBottom="@dimen/dp_5"
                 android:text="深圳机场"
                 android:textColor="@color/colorT9"
                 android:textSize="@dimen/sp_14" />
+
             <TextView
-                android:layout_below="@+id/tv_end_adress"
                 android:id="@+id/tv_end_time_week"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_end_adress"
                 android:text="周六"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
@@ -154,10 +180,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
